= Core Framework

== 2.1.0

* Remove leading and trailing lines as well as indent of rule descriptions
* Fixed sorting of constraints and concepts in HTML report, now sorting by status (failure/warning/success), severity and rule id

== 2.0.10

* Upgraded to Maven Resolver 1.9.18 (used for plugin provisioning)

== 2.0.9

* Upgraded to Maven Resolver 1.9.16 (used for plugin provisioning)

== 2.0.8

* Fixed missing plugins when printing effective configuration

== 2.0.5

* Fixed NPE for logging results for rules without description

== 2.0.0
* Migrated to Java 11, i.e. an according Java Runtime is required to run jQAssistant.
+
NOTE: It is still possible to scan applications compiled with older Java versions.
* Added support for default configurations in the user home directory
* Migrated `configuration` and `plugin` APIs to new `runtime` module
* Added a `key` attribute to each row in the XML report (`jqassistant-report.xml`) to allow matching results between subsequent analysis executions
* Added custom reports (e.g. images, CSV files, etc) to the XML report (`jqassistant-report.xml`)
* Changed the reporting API for scripts to have explicit rows and columns
* Removed Asciidoc & PlantUML related support from core

== 1.12.1
* Upgraded to AsciidoctorJ 2.5.7 and PlantUML 1.2022.12

== 1.12.0
* Added support for configuration via YAML files, environment variables and system properties based on Eclipse Microprofile config mechanism
* Added support for plugin provisioning based on a given configuration via Maven repositories (including dependency resolution)
* Improved the state of an executed rule as `warning` or `failure` to generated reports (e.g. XML)
* Added support for the state `warning` in the XML report
* Removed deprecated source locations from XML report
* Added a message during analysis for concepts which are skipped because they have already been applied in a previous execution